--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <html>
-
-<body>
+  <body>
     <!-- Wrote this part so I would quit closing this browser window accidentally -->
-    <h1>PrAcTiCe PagE fOr ScHooL!! </h1>
-    <h1>DoN't ClOsE! </h1>
+    <h1>PrAcTiCe PagE fOr ScHooL!!</h1>
+    <h1>Week4</h1>
+    <h1>DoN't ClOsE!</h1>
 
     <script src="index.js"></script>
-</body>
-
+  </body>
 </html>
